--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "html-to-text": "^8.0.0",
+    "mongodb": "^4.1.3",
     "telegraf": "^4.4.2"
   }
 }
