--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "html-to-text": "^8.0.0",
+    "chalk": "^4.1.2",
+    "cheerio": "^1.0.0-rc.10",
     "mongodb": "^4.1.3",
-    "telegraf": "^4.4.2"
+    "node-cron": "^3.0.0",
+    "puppeteer": "^11.0.0",
+    "telegraf": "^4.4.2",
+    "transliteration": "^2.2.0"
   }
 }
